--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -10864,403 +10864,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>station_id</th>\n",
-       "      <th>crop</th>\n",
-       "      <th>cycle</th>\n",
-       "      <th>system</th>\n",
-       "      <th>cultivar</th>\n",
-       "      <th>ssp</th>\n",
-       "      <th>gcm</th>\n",
-       "      <th>horizon</th>\n",
-       "      <th>planting_date</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>...</th>\n",
-       "      <th>geometry</th>\n",
-       "      <th>admin0_name</th>\n",
-       "      <th>admin1_name</th>\n",
-       "      <th>admin2_name</th>\n",
-       "      <th>maize_area</th>\n",
-       "      <th>sorghum_area</th>\n",
-       "      <th>millet_area</th>\n",
-       "      <th>wheat_area</th>\n",
-       "      <th>maize_area_by_yield_rfd</th>\n",
-       "      <th>maize_area_by_yield_irr</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>current</td>\n",
-       "      <td>SSP370</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>1995-06-25</td>\n",
-       "      <td>12.791975</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (-16.37565 12.79198)</td>\n",
-       "      <td>Senegal</td>\n",
-       "      <td>Ziguinchor</td>\n",
-       "      <td>Bignona</td>\n",
-       "      <td>1244.399995</td>\n",
-       "      <td>151.2</td>\n",
-       "      <td>8572.799981</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8292.943696</td>\n",
-       "      <td>8616.410247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>current</td>\n",
-       "      <td>SSP370</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>1996-06-17</td>\n",
-       "      <td>12.791975</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (-16.37565 12.79198)</td>\n",
-       "      <td>Senegal</td>\n",
-       "      <td>Ziguinchor</td>\n",
-       "      <td>Bignona</td>\n",
-       "      <td>1244.399995</td>\n",
-       "      <td>151.2</td>\n",
-       "      <td>8572.799981</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8331.950420</td>\n",
-       "      <td>8873.055629</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>current</td>\n",
-       "      <td>SSP370</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>1997-06-11</td>\n",
-       "      <td>12.791975</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (-16.37565 12.79198)</td>\n",
-       "      <td>Senegal</td>\n",
-       "      <td>Ziguinchor</td>\n",
-       "      <td>Bignona</td>\n",
-       "      <td>1244.399995</td>\n",
-       "      <td>151.2</td>\n",
-       "      <td>8572.799981</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8286.559491</td>\n",
-       "      <td>8581.706105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>current</td>\n",
-       "      <td>SSP370</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>1998-06-24</td>\n",
-       "      <td>12.791975</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (-16.37565 12.79198)</td>\n",
-       "      <td>Senegal</td>\n",
-       "      <td>Ziguinchor</td>\n",
-       "      <td>Bignona</td>\n",
-       "      <td>1244.399995</td>\n",
-       "      <td>151.2</td>\n",
-       "      <td>8572.799981</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8351.370335</td>\n",
-       "      <td>8639.391730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>current</td>\n",
-       "      <td>SSP370</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2005.0</td>\n",
-       "      <td>1999-06-08</td>\n",
-       "      <td>12.791975</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (-16.37565 12.79198)</td>\n",
-       "      <td>Senegal</td>\n",
-       "      <td>Ziguinchor</td>\n",
-       "      <td>Bignona</td>\n",
-       "      <td>1244.399995</td>\n",
-       "      <td>151.2</td>\n",
-       "      <td>8572.799981</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8651.519999</td>\n",
-       "      <td>9037.298653</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273723</th>\n",
-       "      <td>999</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>late</td>\n",
-       "      <td>SSP585</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2050.0</td>\n",
-       "      <td>2055-10-26</td>\n",
-       "      <td>-6.332948</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (19.74920 -6.33295)</td>\n",
-       "      <td>Congo - Kinshasa</td>\n",
-       "      <td>Kasaï</td>\n",
-       "      <td>Kamonia</td>\n",
-       "      <td>39076.900047</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>332181.470083</td>\n",
-       "      <td>340636.210500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273724</th>\n",
-       "      <td>999</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>late</td>\n",
-       "      <td>SSP585</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2050.0</td>\n",
-       "      <td>2056-10-26</td>\n",
-       "      <td>-6.332948</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (19.74920 -6.33295)</td>\n",
-       "      <td>Congo - Kinshasa</td>\n",
-       "      <td>Kasaï</td>\n",
-       "      <td>Kamonia</td>\n",
-       "      <td>39076.900047</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>342304.176204</td>\n",
-       "      <td>341260.283095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273725</th>\n",
-       "      <td>999</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>late</td>\n",
-       "      <td>SSP585</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2050.0</td>\n",
-       "      <td>2057-10-26</td>\n",
-       "      <td>-6.332948</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (19.74920 -6.33295)</td>\n",
-       "      <td>Congo - Kinshasa</td>\n",
-       "      <td>Kasaï</td>\n",
-       "      <td>Kamonia</td>\n",
-       "      <td>39076.900047</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>359967.916701</td>\n",
-       "      <td>364628.187819</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273726</th>\n",
-       "      <td>999</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>late</td>\n",
-       "      <td>SSP585</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2050.0</td>\n",
-       "      <td>2058-10-26</td>\n",
-       "      <td>-6.332948</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (19.74920 -6.33295)</td>\n",
-       "      <td>Congo - Kinshasa</td>\n",
-       "      <td>Kasaï</td>\n",
-       "      <td>Kamonia</td>\n",
-       "      <td>39076.900047</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>329378.404832</td>\n",
-       "      <td>342515.123849</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273727</th>\n",
-       "      <td>999</td>\n",
-       "      <td>maize</td>\n",
-       "      <td>1</td>\n",
-       "      <td>mono</td>\n",
-       "      <td>late</td>\n",
-       "      <td>SSP585</td>\n",
-       "      <td>MPI</td>\n",
-       "      <td>2050.0</td>\n",
-       "      <td>2059-10-26</td>\n",
-       "      <td>-6.332948</td>\n",
-       "      <td>...</td>\n",
-       "      <td>POINT (19.74920 -6.33295)</td>\n",
-       "      <td>Congo - Kinshasa</td>\n",
-       "      <td>Kasaï</td>\n",
-       "      <td>Kamonia</td>\n",
-       "      <td>39076.900047</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.100000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>327953.995091</td>\n",
-       "      <td>342241.352594</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>547813 rows × 37 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       station_id   crop cycle system cultivar     ssp  gcm  horizon  \\\n",
-       "0               1  maize     1   mono  current  SSP370  MPI   2005.0   \n",
-       "1               1  maize     1   mono  current  SSP370  MPI   2005.0   \n",
-       "2               1  maize     1   mono  current  SSP370  MPI   2005.0   \n",
-       "3               1  maize     1   mono  current  SSP370  MPI   2005.0   \n",
-       "4               1  maize     1   mono  current  SSP370  MPI   2005.0   \n",
-       "...           ...    ...   ...    ...      ...     ...  ...      ...   \n",
-       "273723        999  maize     1   mono     late  SSP585  MPI   2050.0   \n",
-       "273724        999  maize     1   mono     late  SSP585  MPI   2050.0   \n",
-       "273725        999  maize     1   mono     late  SSP585  MPI   2050.0   \n",
-       "273726        999  maize     1   mono     late  SSP585  MPI   2050.0   \n",
-       "273727        999  maize     1   mono     late  SSP585  MPI   2050.0   \n",
-       "\n",
-       "       planting_date        lat  ...                    geometry  \\\n",
-       "0         1995-06-25  12.791975  ...  POINT (-16.37565 12.79198)   \n",
-       "1         1996-06-17  12.791975  ...  POINT (-16.37565 12.79198)   \n",
-       "2         1997-06-11  12.791975  ...  POINT (-16.37565 12.79198)   \n",
-       "3         1998-06-24  12.791975  ...  POINT (-16.37565 12.79198)   \n",
-       "4         1999-06-08  12.791975  ...  POINT (-16.37565 12.79198)   \n",
-       "...              ...        ...  ...                         ...   \n",
-       "273723    2055-10-26  -6.332948  ...   POINT (19.74920 -6.33295)   \n",
-       "273724    2056-10-26  -6.332948  ...   POINT (19.74920 -6.33295)   \n",
-       "273725    2057-10-26  -6.332948  ...   POINT (19.74920 -6.33295)   \n",
-       "273726    2058-10-26  -6.332948  ...   POINT (19.74920 -6.33295)   \n",
-       "273727    2059-10-26  -6.332948  ...   POINT (19.74920 -6.33295)   \n",
-       "\n",
-       "             admin0_name admin1_name admin2_name    maize_area  sorghum_area  \\\n",
-       "0                Senegal  Ziguinchor     Bignona   1244.399995         151.2   \n",
-       "1                Senegal  Ziguinchor     Bignona   1244.399995         151.2   \n",
-       "2                Senegal  Ziguinchor     Bignona   1244.399995         151.2   \n",
-       "3                Senegal  Ziguinchor     Bignona   1244.399995         151.2   \n",
-       "4                Senegal  Ziguinchor     Bignona   1244.399995         151.2   \n",
-       "...                  ...         ...         ...           ...           ...   \n",
-       "273723  Congo - Kinshasa       Kasaï     Kamonia  39076.900047           0.2   \n",
-       "273724  Congo - Kinshasa       Kasaï     Kamonia  39076.900047           0.2   \n",
-       "273725  Congo - Kinshasa       Kasaï     Kamonia  39076.900047           0.2   \n",
-       "273726  Congo - Kinshasa       Kasaï     Kamonia  39076.900047           0.2   \n",
-       "273727  Congo - Kinshasa       Kasaï     Kamonia  39076.900047           0.2   \n",
-       "\n",
-       "        millet_area  wheat_area  maize_area_by_yield_rfd  \\\n",
-       "0       8572.799981         0.0              8292.943696   \n",
-       "1       8572.799981         0.0              8331.950420   \n",
-       "2       8572.799981         0.0              8286.559491   \n",
-       "3       8572.799981         0.0              8351.370335   \n",
-       "4       8572.799981         0.0              8651.519999   \n",
-       "...             ...         ...                      ...   \n",
-       "273723     0.100000         0.0            332181.470083   \n",
-       "273724     0.100000         0.0            342304.176204   \n",
-       "273725     0.100000         0.0            359967.916701   \n",
-       "273726     0.100000         0.0            329378.404832   \n",
-       "273727     0.100000         0.0            327953.995091   \n",
-       "\n",
-       "        maize_area_by_yield_irr  \n",
-       "0                   8616.410247  \n",
-       "1                   8873.055629  \n",
-       "2                   8581.706105  \n",
-       "3                   8639.391730  \n",
-       "4                   9037.298653  \n",
-       "...                         ...  \n",
-       "273723            340636.210500  \n",
-       "273724            341260.283095  \n",
-       "273725            364628.187819  \n",
-       "273726            342515.123849  \n",
-       "273727            342241.352594  \n",
-       "\n",
-       "[547813 rows x 37 columns]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
@@ -13915,7 +13518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## attempt 2"
+    "## Map aggregation"
    ]
   },
   {
